# Data-Processing-and-Visualization-System

./: .gitignore  CMakeLists.txt  README.md
examples/: example_usage.cpp
include/data_input/: csv_reader.h  json_reader.h  xml_reader.h
include/data_processing/: data_filter.h  data_sorter.h  statistics.h
include/data_visualization/: chart_generator.h  graph_generator.h
src/data_input/: csv_reader.cpp  json_reader.cpp  xml_reader.cpp
src/data_processing/: data_filter.cpp  data_sorter.cpp  statistics.cpp
src/data_visualization/: chart_generator.cpp  graph_generator.cpp
